GNOME Bugzilla – Bug 783485
st: fix "text-shadow: none" to correctly draw no shadow
Last modified: 2017-06-06 19:41:13 UTC
See attached patch.
Created attachment 353271 [details] [review] st: fix "text-shadow: none" to correctly draw no shadow We would incorrectly create a solid black st-shadow with no blur when parsing in a "none" value from css.
Review of attachment 353271 [details] [review]: I didn't test the patch, but looks correct to me (although it would be nice to avoid the explicit is_none parameter, but meh)
Attachment 353271 [details] pushed as 2e1e00c - st: fix "text-shadow: none" to correctly draw no shadow